--- a/future.tex
+++ b/future.tex
@@ -88,7 +88,7 @@ A final point to make is reemphasizing that the I-Mode scaling law is not battle
 
 Before moving on to the final conclusions, we will give a quick recap of the more audacious simplifications used within this fusion systems framework. These include: approximating temperature profiles as simple parabolas, neglecting all radiation except Bremsstrahlung, and handling flux sources at too basic a level.
 
-\subsection{Incorporating Pedestal Temperature Profiles}
+\subsection{Including Pedestal Temperature Profiles}
 
 The most dubious simplification in the code at this point is modeling temperature profiles as parabolas. Although these parabolas work for densities and L-Mode plasma temperatures, the same cannot be said about H-Mode temperatures. This is because they have a distinct pedestal region on the outer edge of the plasma.
 
