--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,14 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@misc{inputfile,
+author = {Meszaros et al},
+title = {{Demo I Input File}},
+url = {http://www.ccfe.ac.uk/assets/Documents/Other/DEMO1{\_}Reference{\_}Design{\_}-{\_}2015{\_}April{\_}({\_}EU{\_}2MDKFH{\_}v1{\_}0.txt},
+urldate = {2018-11-18}
+}
+
+
 @article{diiid,
 author = {Schissel, D P and Mcharg, B B},
 file = {::},
