--- a/model.tex
+++ b/model.tex
@@ -544,6 +544,8 @@ This relation is the secondary constraint important for most pulsed reactor desi
 
 \subsection{Working under the Wall Loading Limit}
 
+\label{subsection:wall_loading}
+
 The first engineering-based secondary constraint -- the wall loading limit -- will prove to be an important quantity when determining the magnet strength at which reactor costs first start to increase. As hinted, its definition originates from nuclear engineering concerns: it is a measure of the maximum neutron damage a tokamak's walls can take over the lifetime of the machine.
 
 The first step in deriving a secondary constraint for wall loading is a description of the problem it models. In a reactor, fusion reactions typically make high-energy neutrons -- with around 14.1 MeV of kinetic energy -- that continually blast the inner wall of the tokamak. Therefore a quick-and-dirty metric would be limiting the amount of neutron power that can be unloaded on the surface area of a tokamak. This can be written as:
