--- a/main.tex
+++ b/main.tex
@@ -61,11 +61,15 @@
 \pgfplotsset{compat=1.3}
 
 %\usepackage[final]{changes}
+\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
 \usepackage{changes}
+\definecolor{blue}{rgb}{0,0,1.}
 
-\includeonly{pulsed,biblio}
+%\includeonly{fussy,biblio}
 
 \let\vec\mathbf
+
+\usepackage{scrextend}
 
 \begin{document}
 
