--- a/steady.tex
+++ b/steady.tex
@@ -550,6 +550,6 @@ As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehs
 \end{equation}
 \myequations{Current Drive Efficiency -- $\eta_{CD}$}
 
-As such, to recalculate it after every solution of the steady current requires a value for both $B_0$ and $R_0$ -- the targets of this model's primary and secondary constraints. These will be the highlight of the next chapter.
+As such, to recalculate it after every solution of the steady current requires a value for both $B_0$ and $R_0$ -- the targets of this model's primary and \replaced{limiting}{secondary} constraints. These will be the highlight of the next chapter.
 
 %\end{document}
