--- a/variables.tex
+++ b/variables.tex
@@ -1,4 +1,7 @@
 \chapter{Presenting \replaced{Static}{Fixed} Variables}
+
+\label{chapter:var_table}
+
 \begin{table}[h]
 \caption{List of \replaced{Static}{Fixed} Variables}
 \begin{tabular}{c|l}
